--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
     "apollo-boost": "^0.1.10",
     "graphql": "^0.13.2",
     "react": "^16.4.1",
